--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
     <title>Bate-papo Uol</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+      </style>
 </head>
 <body>
+
+    <div class="login">
+        <img src="/imagens/logo 1.png" alt="">
+        <input type="text" placeholder="Digite seu nome"> 
+        <button>Entrar</button>
+    </div>
+
+    <div class="header">
+        <img class="logo" src="/imagens/logo 1.png" alt="">
+        <img class="people" src="/imagens/people 1.png" alt="">
+    </div>
+
+    <div class="footer">
+        <textarea name="mensagem" id="mensagem" placeholder="Escreva aqui..." cols="200" rows="4"></textarea>
+        <img class="vector" src="/imagens/Vector.png" alt="">
+    </div>
+
+    <div class="conteudoMensagens"></div>
     
 </body>
 <script src="javascript.js"></script>
