--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
       </style>
+
+<link rel="icon" href="/imagens/logo 1.png">
 </head>
 <body>
 
-    <div class="login">
+    <div class="login" id="login0">
         <img src="/imagens/logo 1.png" alt="">
-        <input type="text" placeholder="Digite seu nome"> 
-        <button>Entrar</button>
+        <input type="text" class="inputUsuario" placeholder="Digite seu nome"> 
+        <button onclick="defineUsuario()">Entrar</button>
     </div>
 
     <div class="header">
@@ -25,12 +27,15 @@
     </div>
 
     <div class="footer">
-        <textarea name="mensagem" id="mensagem" placeholder="Escreva aqui..." cols="200" rows="4"></textarea>
-        <img class="vector" src="/imagens/Vector.png" alt="">
-    </div>
+        <textarea name="mensagem" class="mensagem" id="mensagem" placeholder="Escreva aqui..." cols="200" rows="4"></textarea>
+         <img class="vector" onclick="enviarMensagem()" src="/imagens/Vector.png" alt="">
+     </div> 
 
-    <div class="conteudoMensagens"></div>
+    <ul class="conteudoMensagens"></ul>
+ 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="javascript.js"></script>
     
 </body>
-<script src="javascript.js"></script>
+ 
 </html>
