--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 
     <div class="login" id="login0">
         <img src="/imagens/logo 1.png" alt="">
-        <input type="text" class="inputUsuario" placeholder="Digite seu nome"> 
-        <button onclick="defineUsuario()">Entrar</button>
-    </div>
+        <input type="text" data-test="input-name" class="inputUsuario" placeholder="Digite seu nome"> 
+        <button class="botaoLogin" data-test="send-name" onclick="defineUsuario()">Entrar</button>
+    </div> 
 
     <div class="header">
         <img class="logo" src="/imagens/logo 1.png" alt="">
         <img class="people" src="/imagens/people 1.png" alt="">
     </div>
 
-    <div class="footer">
-        <textarea name="mensagem" class="mensagem" id="mensagem" placeholder="Escreva aqui..." cols="200" rows="4"></textarea>
-         <img class="vector" onclick="enviarMensagem()" src="/imagens/Vector.png" alt="">
+    <div class="footer"> 
+        <textarea data-test="input-message" name="mensagem" class="mensagem" id="mensagem" placeholder="Escreva aqui..." cols="200" rows="4"></textarea>
+         <img data-test="send-message" class="vector" onclick="enviarMensagem()" src="/imagens/Vector.png" alt="">
      </div> 
 
     <ul class="conteudoMensagens"></ul>
