--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="login" id="login0">
-        <img src="/imagens/logo 1.png" alt="">
+        <img class="logoLogin" src="/imagens/logo 1.png" alt="">
         <input type="text" data-test="input-name" class="inputUsuario" placeholder="Digite seu nome"> 
         <button class="botaoLogin" data-test="send-name" onclick="defineUsuario()">Entrar</button>
     </div> 
@@ -37,5 +37,5 @@
     <script src="javascript.js"></script>
     
 </body>
- 
+  
 </html>
