--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 <body>
 
     <div class="login" id="login0">
-        <img class="logoLogin" src="/imagens/logo 1.png" alt="">
+        <img class="logoLogin" src="./imagens/logo 1.png" alt="">
         <input type="text" data-test="input-name" class="inputUsuario" placeholder="Digite seu nome"> 
         <button class="botaoLogin" data-test="send-name" onclick="defineUsuario()">Entrar</button>
     </div> 
 
     <div class="header">
-        <img class="logo" src="/imagens/logo 1.png" alt="">
-        <img class="people" src="/imagens/people 1.png" alt="">
+        <img class="logo" src="./imagens/logo 1.png" alt="">
+        <img class="people" src="./imagens/people 1.png" alt="">
     </div>
 
     <div class="footer"> 
         <textarea data-test="input-message" name="mensagem" class="mensagem" id="mensagem" placeholder="Escreva aqui..." cols="200" rows="4"></textarea>
-         <img data-test="send-message" class="vector" onclick="enviarMensagem()" src="/imagens/Vector.png" alt="">
+         <img data-test="send-message" class="vector" onclick="enviarMensagem()" src="./imagens/Vector.png" alt="">
      </div> 
 
     <ul class="conteudoMensagens"></ul>
